# kitchens

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  README.md  build-docs.sh  build.sh  docker-compose.dev.yml  docker-compose.yml  index.html  mkdocs.yml
.github/workflows/: ci.yml  docs.yml
assets/Kitchen/TECHNICAL DRAWINGS 3D/: 3ds-vvd-drawing3d.3ds
assets/template-ui/: 404.html  index.html  index.txt
backend/: Dockerfile  Dockerfile.dev  README.md  pyproject.toml
backend-development/: index.html
backend/api/: config.py  main.py  routes.py
backend/services/: example_service.py
backend/tests/: test_example_service.py
docker-deployment/: index.html
docs/: backend-development.md  docker-deployment.md  frontend-development.md  getting-started.md  index.md  template-preview.md
docs/assets/Kitchen/TECHNICAL DRAWINGS 2D (.DWG)/: dwg-2d-vvd-2-drawing.dwg  dwg-2d-vvd-showroom-drawing.dwg
docs/assets/Kitchen/TECHNICAL DRAWINGS 3D/: 3ds-vvd-2-drawing3d.3ds  vvd.glb
docs/phase-1/: README.md  main.js  styles.css
frontend/: Dockerfile.dev  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend-development/: index.html
frontend/public/: kitchen
frontend/public/kitchen/TECHNICAL DRAWINGS 2D (.DWG)/: dwg-2d-vvd-3-drawing.dwg
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/components/: KitchenScene.tsx  api-example.tsx  cpq-controls.tsx  header.tsx  hero.tsx
getting-started/: index.html
javascripts/: mathjax.js
phase-1/: index.html
search/: search_index.json
template-preview/: index.html
(+29 files in other folders)
